--- a/contact.html
+++ b/contact.html
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">easy web maker</a></section><section class="header1 cid-spaxVY7aMn" id="header16-n">
+<section class="engine"><a href="https://mobirise.info/y">free html website templates</a></section><section class="header1 cid-spaxVY7aMn" id="header16-n">
 
     
 
@@ -109,7 +109,7 @@
                 </p>
             </div>
             <div class="col-12 col-md-6">
-                <div class="google-map"></div>
+                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCx3d07zxHPLvkFBLlAR3Ng8a9wsAsGoJ8&amp;q=place_id:ChIJpaVI5MNp1moRr1V31Pl4oDc" allowfullscreen=""></iframe></div>
             </div>
         </div>
         <div class="footer-lower">
