--- a/thermostat.html
+++ b/thermostat.html
@@ -55,7 +55,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">easy website maker</a></section><section class="header1 cid-spaCHtGFkZ" id="header16-v">
+<section class="engine"><a href="https://mobirise.info/y">free html site templates</a></section><section class="header1 cid-spaCHtGFkZ" id="header16-v">
 
     
 
