--- a/blinds.html
+++ b/blinds.html
@@ -55,7 +55,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/b">how to create a website</a></section><section class="header1 cid-spVLp8F7MJ" id="header16-2e">
+<section class="engine"><a href="https://mobirise.info/e">how to make a website</a></section><section class="header1 cid-spVLp8F7MJ" id="header16-2e">
 
     
 
