--- a/pricing.html
+++ b/pricing.html
@@ -55,7 +55,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">free html templates</a></section><section class="mbr-section content5 cid-spTGLodGph" id="content5-1p">
+<section class="engine"><a href="https://mobirise.info/h">how to create your own web page</a></section><section class="mbr-section content5 cid-spTGLodGph" id="content5-1p">
 
     
 
