--- a/security.html
+++ b/security.html
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/a">online web builder</a></section><section class="header1 cid-spTMNs2IxD" id="header16-1r">
+<section class="engine"><a href="https://mobirise.info/o">free portfolio web templates</a></section><section class="header1 cid-spTMNs2IxD" id="header16-1r">
 
     
 
@@ -84,61 +84,61 @@
     <div class="container">
         <h3 class="mbr-section-title align-center mbr-fonts-style display-2">Solution Description<br></h3>
         <h4 class="mbr-section-subtitle align-center pb-4 mbr-fonts-style display-7">Blindsce:&nbsp;<span style="color: inherit; font-size: 1rem;">'Hey Siri, Main Room Blinds down'</span></h4>
-        <div class="row mbr-gallery" data-toggle="modal" data-target="#sqAUnC9P67">
+        <div class="row mbr-gallery" data-toggle="modal" data-target="#sqAVLplHHP">
             <div class="col-sm-6 col-md-4 col-lg-3 item gallery-image">
                 <div class="item-wrapper">
-                    <img class="w-100" src="assets/images/background1.jpg" alt="" data-slide-to="0" data-target="#sqAUnC9SXM">
+                    <img class="w-100" src="assets/images/background1.jpg" alt="" data-slide-to="0" data-target="#sqAVLpmbnE">
                 </div>
             </div>
             <div class="col-sm-6 col-md-4 col-lg-3 item gallery-image">
                 <div class="item-wrapper">
-                    <img class="w-100" src="assets/images/background2.jpg" alt="" data-slide-to="1" data-target="#sqAUnC9SXM">
+                    <img class="w-100" src="assets/images/background2.jpg" alt="" data-slide-to="1" data-target="#sqAVLpmbnE">
                 </div>
             </div>
             <div class="col-sm-6 col-md-4 col-lg-3 item gallery-image">
                 <div class="item-wrapper">
-                    <img class="w-100" src="assets/images/background3.jpg" alt="" data-slide-to="2" data-target="#sqAUnC9SXM">
+                    <img class="w-100" src="assets/images/background3.jpg" alt="" data-slide-to="2" data-target="#sqAVLpmbnE">
                 </div>
             </div>
             <div class="col-sm-6 col-md-4 col-lg-3 item gallery-image">
                 <div class="item-wrapper">
-                    <img class="w-100" src="assets/images/background4.jpg" alt="" data-slide-to="3" data-target="#sqAUnC9SXM">
+                    <img class="w-100" src="assets/images/background4.jpg" alt="" data-slide-to="3" data-target="#sqAVLpmbnE">
                 </div>
             </div>
         </div>
 
-        <div class="modal mbr-slider fade" tabindex="-1" role="dialog" aria-hidden="true" id="sqAUnC9P67">
+        <div class="modal mbr-slider fade" tabindex="-1" role="dialog" aria-hidden="true" id="sqAVLplHHP">
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
                     <div class="modal-body">
-                        <div class="carousel slide" data-ride="carousel" id="sqAUnC9SXM">
+                        <div class="carousel slide" data-ride="carousel" id="sqAVLpmbnE">
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
-                                    <img class="d-block w-100" src="assets/images/background120.jpg" alt="">
+                                    <img class="d-block w-100" src="assets/images/background128.jpg" alt="">
                                 </div>
                                 <div class="carousel-item">
-                                    <img class="d-block w-100" src="assets/images/background221.jpg" alt="">
+                                    <img class="d-block w-100" src="assets/images/background229.jpg" alt="">
                                 </div>
                                 <div class="carousel-item">
-                                    <img class="d-block w-100" src="assets/images/background322.jpg" alt="">
+                                    <img class="d-block w-100" src="assets/images/background330.jpg" alt="">
                                 </div>
                                 <div class="carousel-item">
-                                    <img class="d-block w-100" src="assets/images/background423.jpg" alt="">
+                                    <img class="d-block w-100" src="assets/images/background431.jpg" alt="">
                                 </div>
                             </div>
                             <ol class="carousel-indicators">
-                                <li data-slide-to="0" class="active" data-target="#sqAUnC9SXM"></li>
-                                <li data-slide-to="1" data-target="#sqAUnC9SXM"></li>
-                                <li data-slide-to="2" data-target="#sqAUnC9SXM"></li>
-                                <li data-slide-to="3" data-target="#sqAUnC9SXM"></li>
+                                <li data-slide-to="0" class="active" data-target="#sqAVLpmbnE"></li>
+                                <li data-slide-to="1" data-target="#sqAVLpmbnE"></li>
+                                <li data-slide-to="2" data-target="#sqAVLpmbnE"></li>
+                                <li data-slide-to="3" data-target="#sqAVLpmbnE"></li>
                             </ol>
                             <a role="button" href="" class="close" data-dismiss="modal" aria-label="Close">
                             </a>
-                            <a class="carousel-control-prev carousel-control" role="button" data-slide="prev" href="#sqAUnC9SXM">
+                            <a class="carousel-control-prev carousel-control" role="button" data-slide="prev" href="#sqAVLpmbnE">
                                 <span class="mbri-left mbr-iconfont" aria-hidden="true"></span>
                                 <span class="sr-only">Previous</span>
                             </a>
-                            <a class="carousel-control-next carousel-control" role="button" data-slide="next" href="#sqAUnC9SXM">
+                            <a class="carousel-control-next carousel-control" role="button" data-slide="next" href="#sqAVLpmbnE">
                                 <span class="mbri-right mbr-iconfont" aria-hidden="true"></span>
                                 <span class="sr-only">Next</span>
                             </a>
