--- a/thermostat.html
+++ b/thermostat.html
@@ -55,7 +55,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">free html templates</a></section><section class="header1 cid-spaCHtGFkZ" id="header16-v">
+<section class="engine"><a href="https://mobirise.info/e">make your own site</a></section><section class="header1 cid-spaCHtGFkZ" id="header16-v">
 
     
 
