--- a/contact.html
+++ b/contact.html
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/b">how to create a site</a></section><section class="header1 cid-spaxVY7aMn" id="header16-n">
+<section class="engine"><a href="https://mobirise.info/n">free simple site templates</a></section><section class="header1 cid-spaxVY7aMn" id="header16-n">
 
     
 
@@ -86,30 +86,22 @@
     <div class="container">
         <div class="media-container-row content mbr-white">
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
-                <p class="mbr-text">
-                    <strong>Address</strong>
+                <p class="mbr-text"><strong>Contacts</strong>
                     <br>
-                    <br>You beauty! &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;<br>
-                    <br>
-                    <br><strong>Contacts</strong>
-                    <br>
-                    <br>Email: adam@joske.com &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;<br>Phone: +61 414337911 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<br><br></p>
+                    <br>Email: andrewgostin@hotmail.com &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;<br>Phone: +61 414350590 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;<br><br></p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
                 <p class="mbr-text">
                     <strong>Links</strong>
                     <br>
-                    <br><a class="text-primary" href="https://mobirise.co/">Website builder</a>
-                    <br><a class="text-primary" href="https://mobirise.co/">Download for Windows</a>
-                    <br><a class="text-primary" href="https://mobirise.co/">Download for Mac</a>
-                    <br>
+                    <br><br>
                     <br><strong>Feedback</strong>
                     <br>
                     <br>Please send us your ideas, bug reports, suggestions! Any feedback would be appreciated.
                 </p>
             </div>
             <div class="col-12 col-md-6">
-                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCx3d07zxHPLvkFBLlAR3Ng8a9wsAsGoJ8&amp;q=place_id:ChIJpaVI5MNp1moRr1V31Pl4oDc" allowfullscreen=""></iframe></div>
+                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCx3d07zxHPLvkFBLlAR3Ng8a9wsAsGoJ8&amp;q=place_id:ChIJn6wOs6lZwokRLKy1iqRcoKw" allowfullscreen=""></iframe></div>
             </div>
         </div>
         <div class="footer-lower">
@@ -121,7 +113,7 @@
             <div class="media-container-row mbr-white">
                 <div class="col-sm-6 copyright">
                     <p class="mbr-text mbr-fonts-style display-7">
-                        © Copyright 2020 Pupu - All Rights Reserved
+                        © Copyright 2020 Fufu - All Rights Reserved
                     </p>
                 </div>
                 <div class="col-md-6">
