--- a/index2.html
+++ b/index2.html
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/k">develop your own website</a></section><section class="cid-sqASloPFoy mbr-fullscreen mbr-parallax-background" id="header2-37">
+<section class="engine"><a href="https://mobirise.info/n">free simple site templates</a></section><section class="cid-sqASloPFoy mbr-fullscreen mbr-parallax-background" id="header2-37">
 
     
 
@@ -69,7 +69,8 @@
                     Welcome to House-mate</h1>
                 
                 <p class="mbr-text pb-3 mbr-fonts-style display-5">Providers of intuitive and affordable home automation solutions.<br>Maximise the simplicity of your smart home. Let us show you how.</p>
-                <div class="mbr-section-btn"><a class="btn btn-md btn-white-outline display-4" href="https://www.youtube.com/watch?v=Rt0vjm4rluc">YOUTUBE DEMO</a></div>
+                <div class="mbr-section-btn"><a class="btn btn-md btn-secondary display-4" href="https://mobirise.co">LEARN MORE</a>
+                    <a class="btn btn-md btn-white-outline display-4" href="https://www.youtube.com/watch?v=Rt0vjm4rluc">LIVE DEMO</a></div>
             </div>
         </div>
     </div>
