--- a/blinds.html
+++ b/blinds.html
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">how to build your own site</a></section><section class="header1 cid-spVLp8F7MJ" id="header16-2e">
+<section class="engine"><a href="https://mobirise.info/x">free css templates</a></section><section class="header1 cid-spVLp8F7MJ" id="header16-2e">
 
     
 
@@ -94,7 +94,7 @@
                     </div>
                     <div class="card_back card_cont">
                         <h4 class="card-title display-5 py-2 mbr-fonts-style">Keep your rollers</h4>
-                        <p class="mbr-text mbr-fonts-style display-7">Retro fit your existing roller blinds by fitting motors that can be hard wired or battery operated.<br>If you choose battery, the system will alert you when recharging is required.</p>
+                        <p class="mbr-text mbr-fonts-style display-7">Retro fit your existing roller blinds by fitting motors that can be hard wired or battery operated.&nbsp;If you choose battery, the system will alert when to recharge.</p>
                     </div>
                 </div>
             </div>
