--- a/lighting.html
+++ b/lighting.html
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/z">best free website templates</a></section><section class="header1 cid-spawN8CQgz" id="header16-j">
+<section class="engine"><a href="https://mobirise.info/e">how to make your own site for free</a></section><section class="header1 cid-spawN8CQgz" id="header16-j">
 
     
 
@@ -107,7 +107,7 @@
                     </div>
                     <div class="card_back card_cont">
                         <h4 class="card-title py-2 mbr-fonts-style display-5">The smarts are in here</h4>
-                        <p class="mbr-text mbr-fonts-style display-7">WiFi wall switches are supplied and must be installed by qualified electricians behind your existing wall plates.<br>They take up next to no space and can be tucked into the wall or ceiling.</p>
+                        <p class="mbr-text mbr-fonts-style display-7">WiFi wall switches are supplied and must be installed by qualified electricians behind your existing wall plates.<br>They take up next to no space and can be hidden easily.</p>
                     </div>
                 </div>
             </div>
@@ -115,11 +115,11 @@
             <div class="col-12 col-md-6 mb-4 col-lg-3">
                 <div class="card flip-card p-5 align-center">
                     <div class="card-front card_cont">
-                        <img src="assets/images/led-kit-225x225.jpeg" alt="Mobirise" title="">
+                        <img src="assets/images/led-kit-2-225x225.jpeg" alt="Mobirise" title="">
                     </div>
                     <div class="card_back card_cont">
                         <h4 class="card-title py-2 mbr-fonts-style display-5">To dim or not to dim?</h4>
-                        <p class="mbr-text mbr-fonts-style display-7">On/Off switches and Dimmable switches are available.<br><br>If your existing bulbs and/or transformers are dimmable you can instruct Siri to dim the lights too!<br>"Siri, set the Main Room light to 10%"</p>
+                        <p class="mbr-text mbr-fonts-style display-7">On/Off switches and Dimmable switches are available.&nbsp;If your existing bulbs and/or transformers are dimmable you can instruct Siri to dim the lights too!<br>"Siri, set the Main Room light to 10%"</p>
                     </div>
                 </div> 
             </div>
