--- a/security.html
+++ b/security.html
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free website templates</a></section><section class="header1 cid-spZo94Lxj9" id="header16-2t">
+<section class="engine"><a href="https://mobirise.info/k">develop your own website</a></section><section class="header1 cid-spZo94Lxj9" id="header16-2t">
 
     
 
@@ -94,7 +94,7 @@
             <div class="col-12 col-md-6 mb-4 col-lg-3">
                 <div class="card flip-card p-5 align-center">
                     <div class="card-front card_cont">
-                        <img src="assets/images/wyzecam-275x183.jpg" alt="Mobirise" title="">
+                        <img src="assets/images/wyzecam-275x183.jpeg" alt="Mobirise" title="">
                     </div>
                     <div class="card_back card_cont">
                         <h4 class="card-title display-5 py-2 mbr-fonts-style">Unparalled Security</h4>
@@ -134,8 +134,7 @@
                         <img src="assets/images/homekit-security-828x1338.jpg" alt="Mobirise" title="">
                     </div>
                     <div class="card_back card_cont">
-                        <h4 class="card-title py-2 mbr-fonts-style display-5">
-                            Host Anywhere 
+                        <h4 class="card-title py-2 mbr-fonts-style display-5">From Anywhere 
                         </h4>
                         <p class="mbr-text mbr-fonts-style display-7">Simple operation of the alarm using HomeKit.&nbsp;<br>Once the house is armed any breach will notify you via iPhone, iPad, iWatch.</p>
                     </div>
