--- a/thermostat2.html
+++ b/thermostat2.html
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/y">free html web templates</a></section><section class="header1 cid-ssrQT3UV36" id="header16-3w">
+<section class="engine"><a href="https://mobirise.info/l">free site templates</a></section><section class="header1 cid-ssrQT3UV36" id="header16-3w">
 
     
 
@@ -86,7 +86,7 @@
 </div><div>
 </div><div>These thermostats learn your climate preferences—such as if you like it warmer in the morning—and even what times of day you’re home and away. The result is that they can work proactively to keep your home at the most comfortable temperature for you without you having to lift a finger. And they do it all with a high degree of efficiency, reducing energy consumption by 30% or more in some cases.</div><br><div>
 </div><div>
-</div><div>Smart thermostats can send you an alert if the temperature in your home becomes excessively high or low. &nbsp;<span style="font-size: 1rem;">Top smart thermostats include the Nest Learning Thermostat and the ecobee Smart Thermostat. &nbsp;They can connect to&nbsp;</span><span style="font-size: 1rem;">Brivis, Braemar, Rinnai, Mitsubishi, Bonaire, Daikin but to name a few.</span></div><br><div><span style="font-size: 1rem;">Click on the tiles below for additional information</span><br></div></h3>
+</div><div>Smart thermostats can send you an alert if the temperature in your home becomes excessively high or low. &nbsp;<span style="font-size: 1rem;">Top smart thermostats include the Nest Learning Thermostat and the ecobee Smart Thermostat. &nbsp;They can connect to&nbsp;</span><span style="font-size: 1rem;">Brivis, Braemar, Rinnai, Mitsubishi, Bonaire, Daikin and many more.</span></div><br><div><span style="font-size: 1rem;">Click on the tiles below for additional information.</span><br></div></h3>
 
         <div class="media-container-row container pt-5 mt-2">
 
@@ -124,7 +124,7 @@
                     </div>
                     <div class="card_back card_cont">
                         <h4 class="card-title py-2 mbr-fonts-style display-5">Thermostat so smooth!</h4>
-                        <p class="mbr-text mbr-fonts-style display-7">HomeKit renders the thermostat you purchase to look like a stylish dial that can be controlled by your ginfer, or alternatively by voice.<br><br>"Siri, set thermostat to 22 degrees"</p>
+                        <p class="mbr-text mbr-fonts-style display-7">HomeKit renders the thermostat you purchase to look like a stylish dial that can be controlled by your finger, or alternatively by voice.<br><br>"Hey Siri, set thermostat to 22 degrees"</p>
                     </div>
                 </div> 
             </div>
