--- a/thermostat2.html
+++ b/thermostat2.html
@@ -57,7 +57,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/q">free responsive site templates</a></section><section class="header1 cid-ssrQT3UV36" id="header16-3w">
+<section class="engine"><a href="https://mobirise.info/n">free simple web templates</a></section><section class="header1 cid-ssrQT3UV36" id="header16-3w">
 
     
 
