--- a/power.html
+++ b/power.html
@@ -57,7 +57,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free site templates</a></section><section class="header1 cid-ssqChqcvDx" id="header16-3d">
+<section class="engine"><a href="https://mobirise.info/t">free amp template</a></section><section class="header1 cid-ssqChqcvDx" id="header16-3d">
 
     
 
