--- a/pricing.html
+++ b/pricing.html
@@ -57,7 +57,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">simple site builder</a></section><section class="mbr-section content5 cid-spTGLodGph" id="content5-1p">
+<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="mbr-section content5 cid-spTGLodGph" id="content5-1p">
 
     
 
