--- a/thermostat.html
+++ b/thermostat.html
@@ -57,7 +57,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap website templates</a></section><section class="header1 cid-spaxVY7aMn" id="header16-n">
+<section class="engine"><a href="https://mobirise.info/m">website design templates</a></section><section class="header1 cid-spaxVY7aMn" id="header16-n">
 
     
 
@@ -97,7 +97,7 @@
                     <br>Please send us your questions or queries. &nbsp;No question is too big or too small. &nbsp;We get plenty and are happy to answer yours!<br><br></p>
             </div>
             <div class="col-12 col-md-6">
-                <div class="google-map"></div>
+                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCx3d07zxHPLvkFBLlAR3Ng8a9wsAsGoJ8&amp;q=place_id:ChIJ33Uj5shp1moRsrA43lAfkAA" allowfullscreen=""></iframe></div>
             </div>
         </div>
         
