--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
         <div class="menu-logo">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="https://mobirise.co">
-                        <img src="assets/images/logo2.png" alt="Mobirise" style="height: 3.8rem;">
+                    <a href="index.html">
+                        <img src="assets/images/logo2.png" alt="Mobirise" title="" style="height: 3.8rem;">
                     </a>
                 </span>
                 <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="index.html">
@@ -58,7 +58,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/c">website builder</a></section><section class="cid-sqASloPFoy mbr-fullscreen mbr-parallax-background" id="header2-37">
+<section class="engine"><a href="https://mobirise.info/x">free css templates</a></section><section class="cid-sqASloPFoy mbr-fullscreen mbr-parallax-background" id="header2-37">
 
     
 
@@ -108,9 +108,9 @@
     
 
     <div class="container">
-        <h2 class="mbr-section-title pb-2 mbr-fonts-style display-2">One app to control the lot</h2>
+        <h2 class="mbr-section-title pb-2 mbr-fonts-style display-2">One app that controls the lot</h2>
         <h3 class="mbr-section-subtitle pb-3 mbr-fonts-style display-5">
-            Cleverly architected brand agnostic home automation solutions.<br>We increase the simplicity and reduce the price by capitalising on what you already have.</h3>
+            Cleverly architected brand agnostic home automation solutions.<br>We reduce the price by utilising what you already have.</h3>
 
         <div class="media-container-row pt-5">
             <div class="block-content align-right">
@@ -121,13 +121,13 @@
                         </div>
                         <div class="mbr-crt-title">
                             <h4 class="card-title py-2 mbr-crt-title mbr-fonts-style display-7">
-                                Connect Anywhere                     
+                                Connect from anywhere                     
                             </h4>
                         </div>
                     </div>                
 
                     <div class="card-box">
-                        <p class="mbr-text mbr-section-text mbr-fonts-style display-7">Connect to any component in your connected home from anywhere in the world via HomeKit.</p>
+                        <p class="mbr-text mbr-section-text mbr-fonts-style display-7">Connect to any component in your connected home from anywhere in the world via a single app on your iphone. Authenticates using your AppleID.</p>
                     </div>
                 </div>
 
@@ -137,14 +137,12 @@
                             <span class="mbr-iconfont mbri-devices"></span>
                         </div>
                         <div class="mbr-crt-title">
-                            <h4 class="card-title py-2 mbr-crt-title mbr-fonts-style display-7">
-                                Easy and Simple to Use
+                            <h4 class="card-title py-2 mbr-crt-title mbr-fonts-style display-7">Simple to use
                             </h4>
                         </div>
                     </div>
                     <div class="card-box">
-                        <p class="mbr-text mbr-section-text mbr-fonts-style display-7">Utilise HomeKit software on your iPhone for complete control, or instruct Siri to control any component of your house.
-                        </p>
+                        <p class="mbr-text mbr-section-text mbr-fonts-style display-7">Utilise HomeKit software on your iPhone for complete touch control, or instruct Siri to control any component of your connected home.</p>
                     </div>
                 </div>
             </div>
@@ -166,7 +164,7 @@
                     </div>                
 
                     <div class="card-box">
-                        <p class="mbr-text mbr-section-text mbr-fonts-style display-7">Built in alarm system that arms automatically when the last person leaves the house. Video doorbell and camera integration. Movement sensors that can trigger scenes - turn on lights or notify you.</p>
+                        <p class="mbr-text mbr-section-text mbr-fonts-style display-7">Built in alarm system that arms automatically when the last person leaves the house. Video doorbell and camera integration available. Movement sensors that can trigger scenes - turn on lights and notify you.</p>
                     </div>
                 </div>
 
@@ -181,7 +179,7 @@
                         </div>
                     </div>
                     <div class="card-box">
-                        <p class="mbr-text mbr-section-text mbr-fonts-style display-7">Sprinkler system with built in weather station to delay watering if the chance of rain is high.</p>
+                        <p class="mbr-text mbr-section-text mbr-fonts-style display-7">Fully programmable 8 zone sprinkler system with built in localised weather station that will delay watering if the chance of rain is high.&nbsp;</p>
                     </div>
                 </div>
             </div>
@@ -213,7 +211,7 @@
 
                     <div class="card-box">
                         <p class="mbr-text mbr-section-text mbr-fonts-style display-7">
-                            Lighting solution that compliments your existing house. &nbsp;Use your existing lights and switches, or consider dimming solutions. "Siri, turn off the downstairs lights".</p>
+                            Lighting solution that compliments your existing home. &nbsp;Use your existing switches and lights.<br>No need to reaplce them.<br>"Siri, turn off the downstairs lights".</p>
                     </div>
                 </div>
 
@@ -228,7 +226,7 @@
                     </div>
                     <div class="card-box">
                         <p class="mbr-text mbr-section-text mbr-fonts-style display-7">
-                            Blinds motors can be easily retro fitted to existing roller or vertical blinds.. and curtains too!<br></p>
+                            Blind motors can be easily fitted to existing manual roller or venetian blinds and curtains too! Got an existing blind and infra red remote? They can be utilised and included as part of the solution.<br></p>
                     </div>
                 </div>
             </div>
@@ -250,7 +248,7 @@
 
                     <div class="card-box">
                         <p class="mbr-text mbr-section-text mbr-fonts-style display-7">
-                            Garage door control with real time open/closed status. &nbsp;Place a camera in the garage, accept deliveries and then close the garage door.</p>
+                            Garage door control with real time open/closed status that can be fiited to most existing motors. &nbsp;Place a camera in the garage, accept deliveries and then close the garage door all from one app.</p>
                     </div>
                 </div>
 
@@ -264,8 +262,7 @@
                         </div>
                     </div>
                     <div class="card-box">
-                        <p class="mbr-text mbr-section-text mbr-fonts-style display-7">
-                            Heating and Cooling control. Automatically turn off the system when nobody is home or alternatively turn on the heating or cooling on the way home.</p>
+                        <p class="mbr-text mbr-section-text mbr-fonts-style display-7">Intelligent heating and cooling control. Automatically turn on the system when your arrive home or switch it off when the last person leaves. Easily bring your existing system into the smart home.</p>
                     </div>
                 </div>
             </div>
