--- a/lighting.html
+++ b/lighting.html
@@ -41,8 +41,8 @@
         <div class="menu-logo">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="https://mobirise.co">
-                        <img src="assets/images/logo2.png" alt="Mobirise" style="height: 3.8rem;">
+                    <a href="index.html">
+                        <img src="assets/images/logo2.png" alt="Mobirise" title="" style="height: 3.8rem;">
                     </a>
                 </span>
                 <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="index.html">
@@ -57,7 +57,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free website templates</a></section><section class="header1 cid-spawN8CQgz" id="header16-j">
+<section class="engine"><a href="https://mobirise.info/g">build a website for free</a></section><section class="header1 cid-spawN8CQgz" id="header16-j">
 
     
 
@@ -84,13 +84,12 @@
     <div class="container">
         <div class="media-container-row">
             <div class="row col-12 col-md-12">
-                <div class="col-12 mbr-text mbr-fonts-style col-md-6 display-5">
-                     <p>The simplest and most scalable lighting automation solution.</p><p>When it comes to a smart home, lighting is one of the simplest ways to get going.</p>
+                <div class="col-12 mbr-text mbr-fonts-style col-md-6 display-7">
+                     <p><span style="font-size: 1rem;">When it comes to a smart home, lighting is one of the simplest ways to get going.</span></p><p><span style="font-size: 1rem;">Our lighting solution can be retro fitted into any existing home or installed into new homes. Use your existing lights and wiring circuits. A circuit can contain multiple lights.<br></span><br></p>
                 </div>
                 <div class="col-12 mbr-text mbr-fonts-style display-7 col-md-6">
-                     <p><span style="font-size: 1rem;">Our lighting solution can be retro fitted into any existing home or installed into new homes. Use your existing lights and wiring circuits. A circuit can contain multiple lights.</span><br></p><p> Dimmable or non-dimmable switches to control your light circuits are available.
-</p><p>
-<span style="font-size: 1rem;">Control your lights from HomeKit, create automated scenes, or simply say "Hey Siri, Main room lights 20%".&nbsp;</span></p>
+                     <p><span style="font-size: 1rem;">Dimmable or non-dimmable switches to control your light circuits are available.</span><br></p><p>
+<span style="font-size: 1rem;">Control your lights by touch using HomeKit, create automated scenes, or simply say "Hey Siri, Main room lights on".&nbsp;</span></p>
                 </div>
                 
             </div>
@@ -122,7 +121,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/wifis-432x324.png" alt="Mobirise" title="">
+                        <img src="assets/images/wifis-1-432x324.png" alt="Mobirise" title="">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">
@@ -136,7 +135,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/light1-432x324.png" alt="Mobirise" title="">
+                        <img src="assets/images/light1-1-432x324.png" alt="Mobirise" title="">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">To dim or not to dim</h4>
