--- a/security.html
+++ b/security.html
@@ -41,8 +41,8 @@
         <div class="menu-logo">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="https://mobirise.co">
-                        <img src="assets/images/logo2.png" alt="Mobirise" style="height: 3.8rem;">
+                    <a href="index.html">
+                        <img src="assets/images/logo2.png" alt="Mobirise" title="" style="height: 3.8rem;">
                     </a>
                 </span>
                 <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="index.html">
@@ -57,7 +57,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section class="header1 cid-spZo94Lxj9" id="header16-2t">
+<section class="engine"><a href="https://mobirise.info/d">free site maker</a></section><section class="header1 cid-spZo94Lxj9" id="header16-2t">
 
     
 
@@ -83,16 +83,13 @@
     <div class="container">
         <div class="media-container-row">
             <div class="row col-12 col-md-12">
-                <div class="col-12 mbr-text mbr-fonts-style col-md-6 display-5">
-                     <p>Using both wired and wireless systems, we can design the very best system to perform indoors and/or outdoors.
-</p><p>
-<span style="font-size: 1.5rem;">We can also add peripherals such as smoke detectors, movement sensors, door/window sensors and notify your phone if their status changes whilst the house is armed.</span></p>
+                <div class="col-12 mbr-text mbr-fonts-style col-md-6 display-7">
+                     <p>Have your alarm activate automatically when the last person leaves the house and deactivate when the first person arrives home.</p><p>Trigger endless number of scenes when the alarm is armed , eg: turn off lights, TVs.&nbsp;</p><p>Receive notifications on your phone when sensors trigger (iWatch iPhone iPad). &nbsp;</p><p><br></p>
                 </div>
                 <div class="col-12 mbr-text mbr-fonts-style display-7 col-md-6">
-                     <p>Have your alarm activate automatically when the last person leaves the house and deactivate when the first person arrives home. 
-</p><p>Trigger endless number of scenes when the alarm is armed , eg: turn off lights, TVs. Or turn any number of lights on when the system is triggered by its movement sensors, cameras, or doors opening.
+                     <p>Using both wired and wireless systems, we can design sophisticated solution to perform indoors and/or outdoors.
 </p><p>
-<span style="font-size: 1rem;">Receive notifications on your phone when sensors trigger (iWatch iPhone iPad). &nbsp;</span></p><p>Movement sensors that perform dual functions: can be utilised to activate lights or scenes, but also act as alarm movement sensors when the house is armed. Now thats smart!</p>
+<span style="font-size: 1rem;">Add smoke detectors, movement sensors, door/window sensors.  All will send notifications if triggered when the house is armed.</span></p><p>Movement sensors that perform dual functions. They can be utilised to activate lights or scenes, but also act as alarm movement sensors when the house is armed. Now thats smart!</p>
                 </div>
                 
             </div>
@@ -129,10 +126,8 @@
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">
-                            Security 101</h4>
-                        <p class="mbr-text mbr-fonts-style display-7">
-                            Sophisticated and affordable cameras, either wired or wireless that can detect motion and record whats happening. See real time what every camera is seeing.
-                        </p>
+                            Door and window sensors</h4>
+                        <p class="mbr-text mbr-fonts-style display-7">Arm the perimeter of your home automatically when you go to bed. Door and window sensors are a very effective way to secure the home and can be powered or run on battery.</p>
                     </div>
                 </div>
             </div>
