--- a/index22.html
+++ b/index22.html
@@ -42,8 +42,8 @@
         <div class="menu-logo">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="https://mobirise.co">
-                        <img src="assets/images/logo2.png" alt="Mobirise" style="height: 3.8rem;">
+                    <a href="index.html">
+                        <img src="assets/images/logo2.png" alt="Mobirise" title="" style="height: 3.8rem;">
                     </a>
                 </span>
                 <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="index.html">
@@ -58,7 +58,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">free amp template</a></section><section class="cid-spUDIETPKP mbr-fullscreen mbr-parallax-background" id="header2-25">
+<section class="engine"><a href="https://mobirise.info/q">responsive site templates</a></section><section class="cid-spUDIETPKP mbr-fullscreen mbr-parallax-background" id="header2-25">
 
     
 
