--- a/pricing.html
+++ b/pricing.html
@@ -41,8 +41,8 @@
         <div class="menu-logo">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="https://mobirise.co">
-                        <img src="assets/images/logo2.png" alt="Mobirise" style="height: 3.8rem;">
+                    <a href="index.html">
+                        <img src="assets/images/logo2.png" alt="Mobirise" title="" style="height: 3.8rem;">
                     </a>
                 </span>
                 <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="index.html">
@@ -57,7 +57,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="mbr-section content5 cid-spTGLodGph" id="content5-1p">
+<section class="engine"><a href="https://mobirise.info/c">free website builder</a></section><section class="mbr-section content5 cid-spTGLodGph" id="content5-1p">
 
     
 
